# GradientDescent

./: CMakeLists.txt  GradientDescent.h  Makefile  README.md  main.cpp
include/: ConsoleWrapper.h  dialogmodel.h  functionhandler.h  gradientdescent.h  mainwindow.h  model.h
src/: ConsoleWrapper.cpp  GradientDescent.cpp  dialogmodel.cpp  functionhandler.cpp  gradientdescent.cpp  main.cpp  mainwindow.cpp  model.cpp
